# deep-lineage

./: .gitignore  README.md  pyproject.toml
deep_lineage/: __init__.py  layers.py  metrics.py  schema.py  utils.py
deep_lineage/models/: __init__.py  autoencoder.py  classifier.py  regressor.py
scripts/: utils.py
scripts/autoregressive/: evaluate_autoregressive_pipeline.py  train_autoregressive_generator.py  train_expression_classifier.py
scripts/data/: download_and_set_up_data.py  generate_dataset.py  split_trajectories.py  verify_split_integrity.py
scripts/evaluation/: collect_results.py  evaluate_classifier.py  evaluate_regressor.py
scripts/real_training/: evaluate_reprogramming.py  generate_reprogramming_dataset.py  train_autoencoder_reprogramming.py  train_classifier_reprogramming.py  train_regressor_reprogramming.py  validate_reprogramming_dataset.py
scripts/robustness/: analyze_noise_robustness.py  simulate_cell_dropout.py  simulate_clone_misidentification.py
scripts/synthetic_training/: train_autoencoder.py  train_classifier.py  train_regressor.py
