[project]
name = "deep-lineage"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "numpy",
  "pandas",
  "pydantic",
  "scanpy>=1.9.8",
  "scikit-learn",
  "anndata>=0.10",
  "tensorflow>=2.17.0,<2.18.0",
  "h5py>=3.14.0",
  "cospar>=0.3.3",
  "lineage-simulator>=0.1.2",
]

[dependency-groups]
dev = [
    "gdown>=5.2.0",
    "ipykernel",
    "ruff>=0.12.12",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_lineage*", "scripts*"]
